Note about that durned browser

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,9 @@
+TOP PRIORITIES:
+
+* figure out wassup with the browser missing updates
+* Get a movement working properly
+* allow proper scoring
+
 IN PROGRESS:
 
 * After each hand has been played:
@@ -7,6 +13,12 @@ IN PROGRESS:
   - Alternative: require unanimity.  Have four buttons, one for each player.  Only the one for the current player is active.  Each says "I'm done reviewing this hand"; once all four have been pushed, we do ... whatever it is we do next.  (Next board, presumably)
 
 STILL TODO:
+
+* Still seeing occasional update problems in the browser: the browser fails to redraw after the server sends an event.
+
+  This happens most often when the bot is sending events faster than one per second per table, but I've seen it during normal play, too.
+
+  I wonder if I've got htmx swapping the OuterHTML of something, and while that swap is happening perhaps the target element has vanished from the DOM?  In which case, perhaps always doing *inner* swapping could help, since then the target will always be present?
 
 * Maybe have one player -- django admin, perhaps -- have super-user powers: can see all cards, can poke the bot, &c, even in "prod".
 
